@@ -11,11 +11,13 @@ import com.example.hms.payload.dto.HospitalResponseDTO;
 import com.example.hms.payload.dto.PatientConsentResponseDTO;
 import com.example.hms.payload.dto.PatientResponseDTO;
 import com.example.hms.payload.dto.PrescriptionResponseDTO;
+import com.example.hms.payload.dto.RecentActivityDTO;
 import com.example.hms.payload.dto.StaffAvailabilityResponseDTO;
 import com.example.hms.payload.dto.SuperAdminSummaryDTO;
 import com.example.hms.payload.dto.analytics.PlatformAnalyticsDTO;
 import com.example.hms.payload.dto.clinical.treatment.TreatmentPlanResponseDTO;
 import com.example.hms.payload.dto.consultation.ConsultationResponseDTO;
+import com.example.hms.security.audit.CrossTenantReadAudit;
 import com.example.hms.security.context.HospitalContextHolder;
 import com.example.hms.service.AppointmentService;
 import com.example.hms.service.HospitalService;
@@ -46,6 +48,7 @@ public class SuperAdminDashboardController {
     private final PatientService patientService;
     private final PlatformAnalyticsService analyticsService;
     private final HospitalService hospitalService;
+    private final CrossTenantReadAudit crossTenantReadAudit;
 
     /** Hard cap on the typeahead page size to keep payloads small and predictable. */
     private static final int HOSPITAL_SEARCH_MAX_LIMIT = 20;
@@ -53,6 +56,30 @@ public class SuperAdminDashboardController {
     private static final int HOSPITAL_SEARCH_DEFAULT_LIMIT = 20;
     /** Minimum query length before we hit the database (avoids a full table scan from a stray keystroke). */
     private static final int HOSPITAL_SEARCH_MIN_QUERY_LENGTH = 2;
+
+    /**
+     * Belt-and-braces re-check that the caller is a <b>real</b> super-admin
+     * per the discrete {@code isSuperAdmin} JWT claim — not just per
+     * authorities (which {@link com.example.hms.security.JwtTokenProvider}
+     * inflates for real super-admins, and which an impersonation context
+     * could carry verbatim). Every cross-tenant endpoint on this controller
+     * must call this <i>before</i> reading data and <i>before</i> emitting
+     * the audit event, so neither the data nor the audit hook can be
+     * reached by a principal whose JWT does not carry the claim.
+     *
+     * <p>{@link PreAuthorize} stays in place as the first line of defence;
+     * this method is the second line. See design call #1 in
+     * {@code docs/super-admin-cross-tenant-design.md} and the F1 entry in
+     * {@code docs/copilot-review.md} (2026-05-06).</p>
+     *
+     * @throws ResponseStatusException 403 when the JWT claim is absent.
+     */
+    private void requireRealSuperAdminFromJwtClaim() {
+        if (!HospitalContextHolder.getContextOrEmpty().isSuperAdmin()) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN,
+                "Cross-tenant super-admin endpoint is restricted to principals carrying the isSuperAdmin JWT claim.");
+        }
+    }
 
     /**
      * Aggregated metrics + a slice of recent audit events for dashboard widgets.
@@ -145,7 +172,10 @@ public class SuperAdminDashboardController {
         @RequestParam(name = "limit", required = false, defaultValue = "20") int limit,
         Locale locale
     ) {
-        return ResponseEntity.ok(dashboardService.getRecentEncounters(limit, locale));
+        requireRealSuperAdminFromJwtClaim();
+        List<EncounterResponseDTO> rows = dashboardService.getRecentEncounters(limit, locale);
+        crossTenantReadAudit.recordCrossTenantRead("ENCOUNTER", "recent-encounters", rows.size());
+        return ResponseEntity.ok(rows);
     }
 
     /**
@@ -186,7 +216,10 @@ public class SuperAdminDashboardController {
     public ResponseEntity<List<ConsultationResponseDTO>> getRecentConsultations(
         @RequestParam(name = "limit", required = false, defaultValue = "20") int limit
     ) {
-        return ResponseEntity.ok(dashboardService.getRecentConsultations(limit));
+        requireRealSuperAdminFromJwtClaim();
+        List<ConsultationResponseDTO> rows = dashboardService.getRecentConsultations(limit);
+        crossTenantReadAudit.recordCrossTenantRead("CONSULTATION", "recent-consultations", rows.size());
+        return ResponseEntity.ok(rows);
     }
 
     @GetMapping("/recent-lab-orders")
@@ -195,7 +228,10 @@ public class SuperAdminDashboardController {
         @RequestParam(name = "limit", required = false, defaultValue = "20") int limit,
         Locale locale
     ) {
-        return ResponseEntity.ok(dashboardService.getRecentLabOrders(limit, locale));
+        requireRealSuperAdminFromJwtClaim();
+        List<LabOrderResponseDTO> rows = dashboardService.getRecentLabOrders(limit, locale);
+        crossTenantReadAudit.recordCrossTenantRead("LAB_ORDER", "recent-lab-orders", rows.size());
+        return ResponseEntity.ok(rows);
     }
 
     @GetMapping("/recent-lab-results")
@@ -204,7 +240,10 @@ public class SuperAdminDashboardController {
         @RequestParam(name = "limit", required = false, defaultValue = "20") int limit,
         Locale locale
     ) {
-        return ResponseEntity.ok(dashboardService.getRecentLabResults(limit, locale));
+        requireRealSuperAdminFromJwtClaim();
+        List<LabResultResponseDTO> rows = dashboardService.getRecentLabResults(limit, locale);
+        crossTenantReadAudit.recordCrossTenantRead("LAB_RESULT", "recent-lab-results", rows.size());
+        return ResponseEntity.ok(rows);
     }
 
     @GetMapping("/recent-lab-test-definitions")
@@ -212,7 +251,10 @@ public class SuperAdminDashboardController {
     public ResponseEntity<List<LabTestDefinitionResponseDTO>> getRecentLabTestDefinitions(
         @RequestParam(name = "limit", required = false, defaultValue = "20") int limit
     ) {
-        return ResponseEntity.ok(dashboardService.getRecentLabTestDefinitions(limit));
+        requireRealSuperAdminFromJwtClaim();
+        List<LabTestDefinitionResponseDTO> rows = dashboardService.getRecentLabTestDefinitions(limit);
+        crossTenantReadAudit.recordCrossTenantRead("LAB_TEST_DEFINITION", "recent-lab-test-definitions", rows.size());
+        return ResponseEntity.ok(rows);
     }
 
     @GetMapping("/recent-admissions")
@@ -220,7 +262,10 @@ public class SuperAdminDashboardController {
     public ResponseEntity<List<AdmissionResponseDTO>> getRecentAdmissions(
         @RequestParam(name = "limit", required = false, defaultValue = "20") int limit
     ) {
-        return ResponseEntity.ok(dashboardService.getRecentAdmissions(limit));
+        requireRealSuperAdminFromJwtClaim();
+        List<AdmissionResponseDTO> rows = dashboardService.getRecentAdmissions(limit);
+        crossTenantReadAudit.recordCrossTenantRead("ADMISSION", "recent-admissions", rows.size());
+        return ResponseEntity.ok(rows);
     }
 
     @GetMapping("/recent-prescriptions")
@@ -229,7 +274,10 @@ public class SuperAdminDashboardController {
         @RequestParam(name = "limit", required = false, defaultValue = "20") int limit,
         Locale locale
     ) {
-        return ResponseEntity.ok(dashboardService.getRecentPrescriptions(limit, locale));
+        requireRealSuperAdminFromJwtClaim();
+        List<PrescriptionResponseDTO> rows = dashboardService.getRecentPrescriptions(limit, locale);
+        crossTenantReadAudit.recordCrossTenantRead("PRESCRIPTION", "recent-prescriptions", rows.size());
+        return ResponseEntity.ok(rows);
     }
 
     @GetMapping("/recent-treatment-plans")
@@ -237,7 +285,10 @@ public class SuperAdminDashboardController {
     public ResponseEntity<List<TreatmentPlanResponseDTO>> getRecentTreatmentPlans(
         @RequestParam(name = "limit", required = false, defaultValue = "20") int limit
     ) {
-        return ResponseEntity.ok(dashboardService.getRecentTreatmentPlans(limit));
+        requireRealSuperAdminFromJwtClaim();
+        List<TreatmentPlanResponseDTO> rows = dashboardService.getRecentTreatmentPlans(limit);
+        crossTenantReadAudit.recordCrossTenantRead("TREATMENT_PLAN", "recent-treatment-plans", rows.size());
+        return ResponseEntity.ok(rows);
     }
 
     @GetMapping("/recent-referrals")
@@ -245,7 +296,56 @@ public class SuperAdminDashboardController {
     public ResponseEntity<List<GeneralReferralResponseDTO>> getRecentReferrals(
         @RequestParam(name = "limit", required = false, defaultValue = "20") int limit
     ) {
-        return ResponseEntity.ok(dashboardService.getRecentReferrals(limit));
+        requireRealSuperAdminFromJwtClaim();
+        List<GeneralReferralResponseDTO> rows = dashboardService.getRecentReferrals(limit);
+        crossTenantReadAudit.recordCrossTenantRead("REFERRAL", "recent-referrals", rows.size());
+        return ResponseEntity.ok(rows);
+    }
+
+    /**
+     * Aggregate recent-activity feed — F5 from
+     * {@code docs/super-admin-cross-tenant-design.md}. Returns the same
+     * nine lists the per-feed endpoints above produce, but in a single
+     * round-trip so the dashboard's "Recent clinical activity" panel
+     * doesn't fan out 8 HTTP calls per page load.
+     *
+     * <p>Audit: a single {@code DATA_ACCESS} entry per call, classified
+     * as {@code RECENT_ACTIVITY_BUNDLE}, instead of nine separate
+     * entries — keeps the audit trail compact while preserving
+     * traceability (the bundle's {@code rowsReturned} carries the
+     * total row count across all nine feeds, and any analyst can drill
+     * into the per-feed sort fields from the design doc).</p>
+     */
+    @GetMapping("/recent-activity")
+    @PreAuthorize("hasRole('SUPER_ADMIN')")
+    public ResponseEntity<RecentActivityDTO> getRecentActivity(
+        @RequestParam(name = "limit", required = false, defaultValue = "20") int limit,
+        Locale locale
+    ) {
+        requireRealSuperAdminFromJwtClaim();
+        RecentActivityDTO bundle = dashboardService.getRecentActivity(limit, locale);
+        // Null-safe row count: every list is *expected* to be non-null
+        // because the service composes from real `getRecent*` calls (each
+        // returns at worst an empty list), but Copilot is right that
+        // RecentActivityDTO fields are nullable. A future partial-response
+        // path or a test stub passing null must not 500 the audit hook.
+        int totalRows =
+            sizeOrZero(bundle.getEncounters())
+                + sizeOrZero(bundle.getConsultations())
+                + sizeOrZero(bundle.getLabOrders())
+                + sizeOrZero(bundle.getLabResults())
+                + sizeOrZero(bundle.getLabTestDefinitions())
+                + sizeOrZero(bundle.getAdmissions())
+                + sizeOrZero(bundle.getPrescriptions())
+                + sizeOrZero(bundle.getTreatmentPlans())
+                + sizeOrZero(bundle.getReferrals());
+        crossTenantReadAudit.recordCrossTenantRead(
+            "RECENT_ACTIVITY_BUNDLE", "recent-activity", totalRows);
+        return ResponseEntity.ok(bundle);
+    }
+
+    private static int sizeOrZero(List<?> list) {
+        return list == null ? 0 : list.size();
     }
 
     /**
@@ -269,13 +369,10 @@ public class SuperAdminDashboardController {
             defaultValue = "" + HOSPITAL_SEARCH_DEFAULT_LIMIT) int limit,
         Locale locale
     ) {
-        if (!HospitalContextHolder.getContextOrEmpty().isSuperAdmin()) {
-            // The PreAuthorize check above can succeed for impersonation contexts
-            // where authorities were inflated; the JWT claim is the only signal
-            // that the caller is *really* a super-admin right now.
-            throw new ResponseStatusException(HttpStatus.FORBIDDEN,
-                "Cross-tenant hospital search is restricted to super-admins.");
-        }
+        // Belt-and-braces: PreAuthorize succeeds for impersonation contexts
+        // with inflated authorities; the JWT claim is the only signal that
+        // the caller is *really* a super-admin right now.
+        requireRealSuperAdminFromJwtClaim();
 
         String trimmed = q == null ? "" : q.trim();
         if (trimmed.length() < HOSPITAL_SEARCH_MIN_QUERY_LENGTH) {
@@ -283,10 +380,13 @@ public class SuperAdminDashboardController {
             return ResponseEntity.ok(Collections.emptyList());
         }
 
-        int safeLimit = Math.max(1, Math.min(limit, HOSPITAL_SEARCH_MAX_LIMIT));
+        // Java 21+ Math.clamp(value, min, max) replaces Math.max(min, Math.min(max, value)).
+        int safeLimit = Math.clamp(limit, 1, HOSPITAL_SEARCH_MAX_LIMIT);
         // active=true: typeahead never offers archived/suspended tenants as a scope.
         List<HospitalResponseDTO> results = hospitalService.searchHospitals(
             trimmed, null, null, Boolean.TRUE, 0, safeLimit, locale);
+        crossTenantReadAudit.recordCrossTenantRead(
+            "HOSPITAL", "hospitals/search?q=" + trimmed, results.size());
         return ResponseEntity.ok(results);
     }
 }
